--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta name = "viewport" content="with=device-width, initial-scale=1.0">
     <title>University Website Design</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;1,100&display=swap" rel="stylesheet">
+
+    
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
 
@@ -129,10 +134,10 @@
                <img src="img/user1.jpg" alt="">
                <div><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque quo maxime dolorem vel necessitatibus aperiam delectus aut sit distinctio odit accusamus eos corporis ex quam, repudiandae reiciendis. Porro, maxime, labore.</p>
                <h3>Christine Berkley</h3>
-               <i class=".fa-star"></i>
-               <i class=".fa-star"></i>
-               <i class=".fa-star"></i>
-               <i class=".fa-star-half-o"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star"></i>
+               <i class="fa fa-star-half-o"></i>
                </div>
            </div>
            
